--- a/PDFViewer_WinUI3Demo/PDFViewer_WinUI3Demo/PDFViewer_WinUI3Demo.csproj
+++ b/PDFViewer_WinUI3Demo/PDFViewer_WinUI3Demo/PDFViewer_WinUI3Demo.csproj
@@ -36,6 +36,7 @@
     <PackageReference Include="Microsoft.Xaml.Behaviors.WinUI.Managed" Version="2.0.4" />
     <PackageReference Include="PDFTron.WinUI" Version="9.2.1.79456-preview2" />
     <PackageReference Include="PDFTron.WinUI.Tools" Version="9.2.1-preview2" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
     <PRIResource Include="Strings\en-us\Resources.resw" />
